; Author: Lukáš Trecha <xtrechl00@stud.fit.vutbr.cz>

(library
 (name BugFinder)
 (public_name infer.BugFinder)
 (flags
  (:standard
   -open
   Core
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint))
 (libraries core IStdlib ATDGenerated IBase IR Absint)
 (preprocess
  (pps ppx_compare)))
